<resources>
    <string name="app_name">JForceTest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="login_page">Login Page</string>
    <string name="email">Email ID</string>
    <string name="phone_no">Phone No.</string>
    <string name="view_report">View Report</string>
    <string name="submit">Submit</string>
</resources>